3.1.1 (2015-09-22)
------------------
  * Fix 3.1.0 which lacked most of the advertised changes.

3.1.0 (2015-09-22)
------------------
  * Code cleanup.
  * Add command for changing widget style properties.
  * Deprecate commands override_color, override-background-color, and
  override_font.

3.0.0 (2015-02-27)
------------------
  * Change API: No user-visible callbacks anymore, simplifying UI
  creation.  (There are a few additional naming conventions, though.)
  * Change API: Changed feedback messages for a couple of widgets.
  * Synthetically fired events have become a bit more useful.
  * Improve handling of GtkProgressBar and GtkStatusbar.

2.2.0 (2015-02-20)
------------------
  * Add support for GtkDrawingArea.

2.1.0 (2015-01-26)
------------------
  * Add support for GtkExpander, GtkFrame, GtkNotebook, and
  GtkSwitch.
  * Add support for changing of GUI fonts and colors.
  * Rewrite parts of manual page.

2.0.1 (2015-01-18)
------------------
  * Bug fix in the echo.sh example script.

2.0.0 (2015-01-16)
------------------
  * Change output of GtkToggleButton, GtkCheckButton, and
  GtkRadioButton.

1.2.1 (2015-01-11)
------------------
  * Change capitalization of a few error messages.
  * Bug fix in manual page.

1.2.0 (2015-01-08)
------------------
  * Add a command for firing GUI callbacks synthetically.

1.1.0 (2015-01-06)
------------------
  * Change response of GtkTreeView which now reports an additional
  'clicked' message and the values of all selected rows.

1.0.0 (2015-01-04)
------------------
  * Change API: commands now look like "name:action data" rather than
  "name:widget:action data".

0.3.1 (2015-01-03)
------------------
  * Start a NEWS file
  
0.3.0 (2015-01-02)
------------------
  * Added support GtkColorButton, GtkFontButton, and for graying out
  and hiding of arbitrary widgets.