@@ -228,24 +228,6 @@ just open their respective dialogs.
 kills the user interface.  A non-empty
 .Fa name
 is required but ignored.
-.Pp
-.Qo
-.Fa name Ns
-.Ic :override_color
-.Bq Fa color
-.Qc ,
-.Qo
-.Fa name Ns
-.Ic :override_background_color
-.Bq Fa color
-.Qc ,
-.Qo
-.Fa name Ns
-.Ic :override_font
-.Bq Fa font
-.Qc
-are deprecated.  They change the widget's color, background color, or
-font, respectively.
 .El
 .Ss GtkButton
 .Bl -tag -width "commands "
