@@ -502,10 +502,10 @@ check 1 "statusbar1:push Press the \"checkbutton\" which should now be renamed \
 check 1 "checkbutton1:force" "checkbutton1:0"
 check 2 "statusbar1:push Press the \"radiobutton\" which should now be renamed \"RADIO\"\n radiobutton2:set_label RADIO" "radiobutton1:0" "radiobutton2:1"
 check 2 "radiobutton1:force" "radiobutton2:0" "radiobutton1:1"
-check 1 "statusbar1:push Click the widget whose label font is now Bold Italic 20\n switch1:override_font Bold Italic 20" "switch1:1"
-check 1 "statusbar1:push Click the widget whose label has turned red\n switch1:override_color red" "switch1:0"
-check 1 "statusbar1:push Click the widget whose background has turned yellow\n checkbutton1:override_background_color yellow" "checkbutton1:1"
-check 1 "statusbar1:push Press \"OK\" if font and colors changed in previous steps are back to normal\n switch1:override_font\n switch1:override_color\n checkbutton1:override_background_color" "button1:clicked"
+check 1 "statusbar1:push Click the widget whose label font is now Bold Italic 20\n switch1:style font:Bold Italic 20" "switch1:1"
+check 1 "statusbar1:push Click the widget whose label has turned red\n switch1:style color:red" "switch1:0"
+check 1 "statusbar1:push Click the widget whose background has turned yellow\n checkbutton1:style background-color:yellow" "checkbutton1:1"
+check 1 "statusbar1:push Press \"OK\" if font and colors changed in previous steps are back to normal\n switch1:style\n checkbutton1:style" "button1:clicked"
 check 1 "switch1:force" "switch1:1"
 check 1 "statusbar1:push Press \"OK\" if the \"lorem ipsum dolor ...\" text inside \"frame1\" now reads \"LABEL\"\n label1:set_text LABEL" "button1:clicked"
 check 1 "statusbar1:push Press \"OK\" if the label of the frame around \"LABEL\" now reads \"LOREM IPSUM\"\n frame1:set_label LOREM IPSUM" "button1:clicked"
