@@ -1,3 +1,8 @@
+(unreleased)
+------------------
+  * Change API: Remove deprecated commands override_color,
+  override-background-color, and override_font.
+
 3.1.1 (2015-09-22)
 ------------------
   * Fix 3.1.0 which lacked most of the advertised changes.
@@ -6,7 +11,7 @@
 ------------------
   * Code cleanup.
   * Add command for changing widget style properties.
-  * Deprecate commands override_color, override-background-color, and
+  * Deprecate commands override_color, override_background_color, and
   override_font.
 
 3.0.0 (2015-02-27)
